# Research-MetadataAnnotation

./: BLOG.md  DESIGN_DOC.md  PAPER_DRAFT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
experiments/: exp0_baseline.py
results/: exp0_baseline.json
scripts/: run_demo.py
src/metadataannotation/: __init__.py  core.py  data.py  evaluate.py
tests/: test_core.py  test_data.py  test_evaluate.py
